# TrackPerfPlots

./: README.md  plot_efficiency.py  setup.cfg
TrackPerf/: config.py
runconfigs/: data_guns.yaml  data_muonGun.yaml  data_pionGun.yaml  vars_efficiency.yaml
